# grape

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  colors.h  main.c  rangelist.c  rangelist.h
include/: colors.h  display.h  flags.h  logging.h  rangelist.h  textformat.h
src/: display.c  flags.c  logging.c  main.c  rangelist.c
